ajustado request do post para não usar informações do produto somente o Id
